@@ -71,6 +71,9 @@ Debug:
 Recovery:
 * scan for records in chunk free space
 
+2013713
+* worked on tests
+
 2013712
 * fix for encoding special characters in XML output
 * code clean up
